# AerialPhotogrammetry3D

./: .gitignore  requirements.txt  run_pipeline.py
benchmarks/: bench_python.py  test_all.py  test_ba_accuracy.py
csrc/: CMakeLists.txt
csrc/ba/: ba.cpp  ba.h  bind.cpp
csrc/depth/: depth_parallel.cpp
data/aerial/mygla/: README.md  cameras.json  images.json  img_list.txt  log.json
notebooks/: _add_scale_alignment.py  phase1_data_generation.ipynb  phase2_feature_matching.ipynb  phase3_sfm.ipynb  phase4_mvs.ipynb  phase5_mesh.ipynb  phase6_texture.ipynb  phase7_occlusion.ipynb  phase8_evaluation.ipynb
src/data_gen/: camera_rig.py  synthetic_scene.py
src/evaluation/: metrics.py  visualizer.py
src/features/: detector.py  matcher.py
src/mesh/: processing.py  reconstruction.py
src/mvs/: depth_estimator.py  depth_fusion.py
src/occlusion/: detector.py  inpainter.py
src/sfm/: bundle_adjustment.py  incremental.py  triangulation.py  two_view.py
src/texture/: texture_mapper.py  uv_atlas.py  view_selection.py
